<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".EndScreen">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/toobad"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />



    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:src="@drawable/hmmoney"
        app:layout_constraintBottom_toTopOf="@+id/bestsrteakTv"
        app:layout_constraintEnd_toStartOf="@+id/hmpointsTv"
        app:layout_constraintTop_toBottomOf="@+id/titleTv"
        android:contentDescription="@string/lorem" />

    <TextView
        android:id="@+id/hmpointsTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hmpoints"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />


    <TextView
        android:id="@+id/bestsrteakTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gold"
        android:text="@string/yourbeststreak"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/streakTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />


    <TextView
        android:id="@+id/streakTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentstr"
        app:layout_constraintBottom_toTopOf="@+id/earnedsaviTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/leftemit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/definitionBt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rightupemit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="10dp"
        app:layout_constraintBottom_toTopOf="@+id/hangmanwordTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bestsrteakTv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rightemit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/definitionBt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hangmanwordTV" />

    <TextView
        android:id="@+id/earnedsaviTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/earnedsaviour"
        android:textAllCaps="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/leftemit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hangmanwordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/definitionBt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/earnedsaviTv"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageButton
        android:id="@+id/thumbdownIB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@null"
        android:src="@drawable/thumbdown"
        app:layout_constraintBottom_toTopOf="@+id/definitionBt"
        app:layout_constraintStart_toEndOf="@+id/hangmanwordTV"
        app:layout_constraintTop_toTopOf="@+id/hangmanwordTV" />



    <Button
        android:id="@+id/definitionBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorSecondary"
        android:text="@string/definition"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/rightemit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hangmanwordTV" />


    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="?colorSecondary"
        android:text="@string/backhome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>