<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">


    <TextView
        android:id="@+id/chosenWTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:letterSpacing="0.2"
        android:text="@string/lorem"
        android:textColor="?colorOnPrimary"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hmmoney"
        app:layout_constraintEnd_toStartOf="@+id/hmpointsTv"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/lorem"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hmpointsTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/hmpoints"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/heartIV"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/lorem"
        android:minWidth="60dp"
        android:minHeight="60dp"
        android:src="@drawable/pheart"
        app:layout_constraintBottom_toTopOf="@+id/fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chosenWTV" />

    <TextView
        android:id="@+id/livesrTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/livesR"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chosenWTV" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.imber.hangmanglobal.keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout="@layout/fragment_keyboard" />


</androidx.constraintlayout.widget.ConstraintLayout>